# cf-remote

./: Makefile  README.md  black_output.txt  commit_message.txt  pyproject.toml  run_tests.sh
.github/workflows/: black-format.yml  tests.yml
cf_remote/: main.py  spawn.py  ssh.py
